adding emphasis to links in about section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           src="./img/coffee.png"
           alt="Image of Coffee Cup"
         />
-        Rose Hack is UC Riverside’s first women-centric hackathon*, founded by the female leaders of the <a href="http://winc.cs.ucr.edu/">Association of Computing Machinery</a> (ACM-W) and the <a href="http://ucrswe.weebly.com/">Society of Women Engineers</a> (SWE). Rose Hack’s mission is to encourage individuals from underrepresented groups in STEM to create a strong network together through their shared passions in Science and Technology.
+        Rose Hack is UC Riverside’s first women-centric hackathon*, founded by the female leaders of the <a href="http://winc.cs.ucr.edu/">Association for Computing Machinery</a> (ACM-W) and the <a href="http://ucrswe.weebly.com/">Society of Women Engineers</a> (SWE). Rose Hack’s mission is to encourage individuals from underrepresented groups in STEM to create a strong network together through their shared passions in Science and Technology.
 
       </p>
       <p>
