updating about footnote

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <p>
         Come for a lively weekend of innovation, face masks, discovering and creating new technology, networking, mentorship, and much more.
       </p>
-      <p style="color: #bcbcbc; font-size: 14px;"><em>* Rose Hack is completely beginner friendly for high school and undergraduate students of all races, gender, and sexuality.</em></p>
+      <p style="color: #bcbcbc; font-size: 14px;"><em>* Rose Hack is completely beginner friendly for high school and undergraduate students of all races, gender identifications, and sexualities.</em></p>
     </section>
 
     <section class="background-teal">
