update travel info

--- a/index.html
+++ b/index.html
@@ -418,8 +418,7 @@
             <div class="tab-content">
               <p>
                 Participants will be provided with parking permits to park at UC
-                Riverside for free. We are working with our sponsors to add
-                travel reimbursment as a benefit for participants.
+                Riverside for free. Unfortunately, we won't be able to provide travel reimbursements this year. However, we may set up a carpool system for some participants. Feel free to email us for further updates!
               </p>
             </div>
           </div>
