add datadog as sponsor

--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@
         <a href="https://balsamiq.com/" target="_blank" rel="noopener">
           <img class="sponsor" src="./img/balsamiq.png" alt="Balsamiq" />
         </a>
+        <a href="https://www.datadoghq.com" target="_blank" rel="noopener">
+          <img class="sponsor" src="./img/datadog.png" alt="Datadog" />
+        </a>
         <a
           href="http://www.arcadecoffeeroasters.com/"
           target="_blank"
