Changed Wendy's link from personal website to LinkedIn

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
           <!-- Meet the Organizers -->
           <p style="font-family: 'Arvo','serif';font-size:1.2em;margin-bottom: 5%;margin-left:13%;text-align:center">Lead Organizers</p>
           <div class="row">
-            <a href="http://wendyli.net" class="organizer hvr-float-shadow">
+            <a href="https://www.linkedin.com/in/wendingoli/" class="organizer hvr-float-shadow">
               <img class="org-img" src="https://i.imgur.com/H75ME3m.jpg">
               <span class="org-name">Wendy Li</span>
             </a>
