update sponsorship package for 2020

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       </div>
       <div class="hero-text">
 
-        <a href="/live" class="email-button">Live Website</a>
+        <a href="/live" class="email-button"> Live Website</a>
+        <p> Rose Hack 2020 coming soon!</p>
       </div>
 
       <div id="rosehack-hero"></div>
@@ -360,7 +361,7 @@
         Interested in sponsoring Rose Hack 2019? Reach out to
         <a href="mailto:sponsorship@rosehack.com">sponsorship team</a>, or view
         our
-        <a href="./static/RoseHackSponsorship.pdf" target="_blank"
+        <a href="./static/RoseHack2020sponsorship.pdf" target="_blank"
           >sponsorship package</a
         >.
       </p>
