change sponsorship tag line to 2020

--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
         </a>
       </div>
       <p class="sponsor-cta">
-        Interested in sponsoring Rose Hack 2019? Reach out to
-        <a href="mailto:sponsorship@rosehack.com">sponsorship team</a>, or view
+        Interested in sponsoring Rose Hack 2020? Reach out to
+        <a href="mailto:rosehackucr@gmail.com">sponsorship team</a>, or view
         our
         <a href="./static/RoseHack2020sponsorship.pdf" target="_blank"
           >sponsorship package</a
