add 2020 subscription input

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="hero-text">
 
         <a href="/live" class="email-button"> Live Website</a>
-        <p> Rose Hack 2020 coming soon!</p>
+        <p>  Subscribe <a href="http://eepurl.com/gw2371">here</a> for Rose Hack 2020 Updates</p>
       </div>
 
       <div id="rosehack-hero"></div>
